Started the first page of Xamarin App

--- a/src/Xamarin/TheLosers.BH4.XamarinFormsApp/TheLosers.BH4.XamarinFormsApp/MainPage.xaml
+++ b/src/Xamarin/TheLosers.BH4.XamarinFormsApp/TheLosers.BH4.XamarinFormsApp/MainPage.xaml
@@ -8,9 +8,18 @@
 
     <StackLayout>
         <!-- Place new controls here -->
-        <Label Text="Welcome to Xamarin.Forms!" 
-           HorizontalOptions="Center"
-           VerticalOptions="CenterAndExpand" />
+        <StackLayout VerticalOptions="FillAndExpand">
+            <Label Text="Cool App" FontSize="65"
+           HorizontalOptions="Center" Padding="0,75,0,0"/>
+        </StackLayout>
+       
+
+        <Button HorizontalOptions="CenterAndExpand"
+                Text="Start"
+                VerticalOptions="CenterAndExpand"
+                WidthRequest="200"
+                HeightRequest="50" Padding="0"
+                AnchorX="50"/>
     </StackLayout>
 
 </ContentPage>
